    get "consignor/yvsu" => "devise/registrations#new", as: "new_user_registration"     
  end
 https://github.com/heartcombo/devise/wiki/How-To:-Change-the-default-sign_in-and-sign_out-routes
###################################

On 7.5.2021, changed show.html.erb in horses
      	<% @path = "http://s3.amazonaws.com/yv-output/" + @horse.BulkUploadVideoName[0...-4] + "/hls_" + @horse.BulkUploadVideoName[0...-4] + ".m3u8" %>
to
    	<% @path = "https://yv-output2.s3.us-east-2.amazonaws.com/" + @horse.BulkUploadVideoName[0...-4] + "/" + @horse.BulkUploadVideoName[0...-4] + ".m3u8" %>


#####################
On 7.6.2021 changed the net http code

		<% res = http.request(request) %> -->
to
		<% res = Net::HTTP.get_response(uri) %>
SOURCE: https://ruby-doc.org/stdlib-2.7.2/libdoc/net/http/rdoc/Net/HTTP.html

############################	

On 7.6.2021  noticed QR PDF generator broke. I changed two things:

1. in farm_pdf.rb:

    @farm = farm
to 
	@farm = Farm.find(farm)

2. In farms controller:

	pdf = FarmPdf.new(@farm, sale)
to
	pdf = FarmPdf.new(@farm.id, sale.id)

#################
 On 7.7, i changed the bounces controller to find the download on S3:
 
  	resp = s3.get_object({ bucket:'yv-output2', key: params[:filename] }, target: params[:filename])
to 
	foldery=params[:filename][0...-4] + "/"
   	resp = s3.get_object({ bucket:'yv-output2', key: foldery + params[:filename] }, target: params[:filename])

#################
 On 7.8, I added a parameter to the bounces/download pages to see if this stops some bot from automatically trying to download
bounces controller:
 if  params[:token] == 'random'
   redirect_to "https://www.google.com"
 end
 if !params[:token]
   redirect_to "https://www.google.com"
 end
 
 downloads index
	<td width="35%" style="padding-left: 2%"><%= link_to "Download video", new_bounce_path(:filename => horse.BulkUploadVideoName,:token => 'random') %></td>

#########################################


